feat: bulk notification api (#63)
* refactor: alerts notification service

* feat: bulk notifications api

* fix: test

* chore: remove unnecessary files

* feat: add substraction texttemplate
